# slac-alarm-manager

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  dev-requirements.txt  doc-environment.yml  doc-requirements.txt  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-and-test.yml  gh-pages.yml  publish-to-pypi.yml
alarm_manager/: index.html
developer/: index.html
docs/: alarm_manager.md  developer.md  index.md  pydm.md
examples/: kafka_setup.py
pydm/: index.html
pydm_alarm_plugin/: README.md  alarm_plugin.py
search/: search_index.json
slam/: __init__.py  alarm_configuration_widget.py  alarm_item.py  alarm_table_model.py  alarm_table_view.py  alarm_tree_model.py  alarm_tree_view.py  archive_search.py  kafka_reader.py  main_window.py  permissions.py
slam/tests/: conftest.py  test_alarm_configuration_widget.py  test_alarm_item.py  test_alarm_plugin.py  test_alarm_table_model.py  test_alarm_table_view.py  test_alarm_tree_model.py  test_alarm_tree_view.py  test_archive_search.py  test_main_window.py  test_permissions.py
slam_launcher/: main.py
